--- a/config/series.yaml
+++ b/config/series.yaml
@@ -1,19 +1,21 @@
+# config/series.yml
+# PURPOSE: Declare all series the pipeline supports and how to resolve them to a book/curriculum.
+# - "math_of_ML": real post to Instagram
+# - "MAS": dry run only
+# - "mixed": uniform-random pick of one of the real series (no IG post for now)
+
 series:
-  ai_teacher:
-    title: "AI Linear Algebra Daily"
-    platforms: ["instagram","tiktok"]
-    aspect_ratio: "9:16"
-    target_len_sec: 45
-    topic_source: "config/topics/linear_algebra_week1.csv"
-  ai_drama:
-    title: "Neon Nights (AI Mini-Drama)"
-    platforms: ["tiktok"]
-    aspect_ratio: "9:16"
-    target_len_sec: 50
-    topic_source: ""
-  ai_memes:
-    title: "AI Meme News"
-    platforms: ["instagram"]
-    aspect_ratio: "9:16"
-    target_len_sec: 30
-    topic_source: ""
+  math_of_ML:
+    book_slug: math_of_ML          # maps to data/curriculum/math_of_ML/...
+    post_to_instagram: true        # only this one posts for real
+
+  MAS:
+    book_slug: MAS                 # maps to data/curriculum/MAS/...
+    post_to_instagram: false       # dry run
+
+  mixed:
+    book_slug: mixed               # special: we'll pick from the "options" list below
+    post_to_instagram: false       # dry run
+    options:                       # candidates to pick uniformly at random
+      - math_of_ML
+      - MAS
