--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -59,7 +59,7 @@ jobs:
           # Ensure core deps present even without vendor wheels
           pip install --upgrade pip
           pip install numpy pillow
-          pip install matplotlib networkx graphviz pyyaml pandas
+          pip install matplotlib networkx graphviz pyyaml pandas requests
 
       # ----------------- PIPELINE -----------------
 
